Fixed some CSS alignements

--- a/Resources/bootstrap-3.0.0/less/home.less
+++ b/Resources/bootstrap-3.0.0/less/home.less
@@ -30,7 +30,7 @@
   p {
 
 
-    margin-top: -10px;
+    margin-top: -6px;
     font-size: 20px;
 
 
@@ -41,8 +41,10 @@
 
 .logo {
 
+  text-align: right;
+
   img {
-    width: 44px;
+    width: 50px;
   }
 }
 
